--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -5,6 +5,14 @@
   overflow: hidden;
 }
 
+.fundraiser_banner_article {
+  width: 100%;
+  img {
+    width: 100%;
+    height: auto;
+  }
+}
+
 .articles {
   max-width: 250px;
   min-width: 250px;
