--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -104,6 +104,12 @@
       <%= markdown @post.content %>
     </div>
 
+    <div class="fundraiser_banner_article">
+      <a href="https://www.rcucommunityfund.org/theteenmagazine" target="_blank">
+        <img alt="Help the victims of the 2017 North Bay fires" src="https://i.imgur.com/0xC7FxQ.png" />
+      </a>
+    </div>
+
   <div id="mc_embed_signup" style="width: 100%; margin: 20px 0; margin-left: 0px;">
   <form action="//herokuapp.us14.list-manage.com/subscribe/post?u=5c2a24e15a906f29e2c6a9b72&amp;id=3081d2e76a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" style="padding-left: 0;" novalidate>
       <div id="mc_embed_signup_scroll">
@@ -122,7 +128,7 @@
   </form>
   </div>
 
-  <% if current_user && (current_user.id == @post.user_id || current_user.admin? || current_user.editor?) %>
+  <% if current_user && (current_user.id == @post.user_id || @post.collaboration == current_user.full_name || current_user.admin? || current_user.editor?) %>
     <div id="admin_links">
       <%= link_to "Edit Article", edit_post_path(@post) %>
       <% if current_user && (current_user.id == @post.user_id || current_user.admin) %>
