--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -83,7 +83,12 @@
               <a class="link" href="/categories/fashion">Fashion</a>
               <a class="link" href="/categories/entertainment">Entertainment</a>
               <a class="link" class="nav--apply" href="/contacts/new">Contact</a>
+              <% if current_user && (current_user.admin? || current_user.editor?) %>
+                <%= link_to "Users", users_path %>
+              <% end %>
               <% if user_signed_in? %>
+                <%= link_to "Dashboard", user_path(current_user) %>
+                <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
               <% else %>
                   <a class="link" href="/applies/new">Apply</a>
               <% end %>
