--- a/app/views/layouts/article.html.erb
+++ b/app/views/layouts/article.html.erb
@@ -77,9 +77,9 @@
         <div class="border">
           <div class="logo--flex">
             <i class="fa fa-bars toggle_menu" style="color: white;"></i>
-            <h1 id="main_title" class="name"><%= link_to "The Teen Magazine", root_path %></h1>
+            <h1 id="main_title" class="name main_title2"><%= link_to "The Teen Magazine", root_path, style: "color: white !important;" %></h1>
           </div>
-          <nav style="background-color: black; border: none;" class="nav_article">
+          <nav style="background-color: black; border: none;" class="nav_article" id="nav_article2">
             <%= link_to "The Teen Magazine", root_path, class: "nav-title", style: "color: white !important;" %>
             <a href="/categories/beauty">Beauty</a>
             <a href="/categories/fashion">Fashion</a>
