--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -106,7 +106,7 @@
 
     <div class="fundraiser_banner_article">
       <a href="https://www.rcucommunityfund.org/theteenmagazine" target="_blank">
-        <img alt="Help the victims of the 2017 North Bay fires" src="https://i.imgur.com/0xC7FxQ.png" />
+        <img style="margin: 20px 0px;" alt="Help the victims of the 2017 North Bay fires" src="https://i.imgur.com/0xC7FxQ.png" />
       </a>
     </div>
 
