--- a/app/views/layouts/article.html.erb
+++ b/app/views/layouts/article.html.erb
@@ -126,6 +126,14 @@
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
     ga('create', 'UA-89987071-1', 'auto');
     ga('send', 'pageview');
+    var a = document.getElementsByTagName(‘a’);
+    for(i = 0; i < a.length; i++){
+    if (a[i].href.indexOf(location.host) == -1 && a[i].href.match(/^http:///i)){
+    a[i].onclick = function(){
+    _gaq.push([‘_trackEvent’, ‘outgoing_links’, this.href.replace(/^http:///i, ”)]);
+    }
+    }
+    }
       $(document).ready(function() {
         $(".fa-times").click(function() {
           $(".sidebar_menu").addClass("hide_menu");
