--- a/app/views/layouts/article.html.erb
+++ b/app/views/layouts/article.html.erb
@@ -81,9 +81,9 @@
           </div>
           <nav style="background-color: black; border: none;" class="nav_article" id="nav_article2">
             <%= link_to "The Teen Magazine", root_path, class: "nav-title", style: "color: white !important;" %>
-            <a href="/categories/beauty">Beauty</a>
-            <a href="/categories/fashion">Fashion</a>
-            <a href="/categories/entertainment">Entertainment</a>
+            <a href="/categories/get-involved">Get Involved</a>
+            <a href="/categories/academics">Academics</a>
+            <a href="/categories/health-fitness">Health</a>
             <a class="nav--apply" href="/contacts/new">Contact</a>
             <% if user_signed_in? %>
             <% else %>
