personal stories; highlight change; sidebar menu fix

--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -217,7 +217,7 @@
        margin: 0 auto !important;
      }
      a {
-       color: #e0528d;
+       color: #ef2673;
      }
      a:hover {
       opacity: 0.5;
