--- a/app/views/layouts/category.html.erb
+++ b/app/views/layouts/category.html.erb
@@ -23,12 +23,16 @@
   </script>
   <body>
     <div class="category">
-      <div class="sidebar_menu hide_menu">
+      <div class="sidebar_menu hide_menu" style="background-color: #ef2673;">
         <i class="fa fa-times"></i>
         <h1><%= link_to "The Teen Magazine", root_path %></h1>
+        <a href="/categories/get-involved">Get Involved</a>
+        <a href="/categories/academics">Academics</a>
+        <a href="/categories/health-fitness">Health</a>
         <a href="/categories/beauty">Beauty</a>
         <a href="/categories/fashion">Fashion</a>
         <a href="/categories/entertainment">Entertainment</a>
+        <a href="/categories/personal-stories">Personal Stories</a>
         <a href="/contacts/new">Contact</a>
         <% if current_user && (current_user.admin? || current_user.editor?) %>
           <%= link_to "Users", users_path %>
@@ -39,7 +43,10 @@
        <% else %>
            <a href="/applies/new">Apply</a>
         <% end %>
+        <div style="height: 2000px; background-color: #ef2673;">
+        </div>
       </div>
+
     <div class="overflow">
       <div class="bodywrapper">
       <header id="main_navigation" class="clearfix">
@@ -98,14 +105,12 @@
       $(document).ready(function() {
         $(".fa-times").click(function() {
           $(".sidebar_menu").addClass("hide_menu");
-          $(".sidebar_menu").addClass("opacity_one");
           $(".bodywrapper").removeClass("push");
           $(".bodywrapper").addClass("pushback");
         });
 
         $(".toggle_menu").click(function() {
           $(".sidebar_menu").removeClass("hide_menu");
-          $(".sidebar_menu").removeClass("opacity_one");
           $(".bodywrapper").addClass("push");
           $(".bodywrapper").removeClass("pushback");
         });
