--- a/app/views/layouts/article.html.erb
+++ b/app/views/layouts/article.html.erb
@@ -35,22 +35,26 @@
       });
     </script>
     <script type="text/javascript" data-cfasync="false" src="//dsms0mj1bbhn4.cloudfront.net/assets/pub/shareaholic.js" data-shr-siteid="c9da6ae24795a7bfd3892b5ea7e9c54b" async="async"></script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-4566416931763342",
+        enable_page_level_ads: true
+      });
+    </script>
   </head>
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({
-      google_ad_client: "ca-pub-4566416931763342",
-      enable_page_level_ads: true
-    });
-  </script>
   <body>
     <div class="category">
-      <div class="sidebar_menu hide_menu">
+      <div class="sidebar_menu hide_menu" style="background-color: #ef2673;">
         <i class="fa fa-times"></i>
         <h1><%= link_to "The Teen Magazine", root_path %></h1>
+        <a href="/categories/get-involved">Get Involved</a>
+        <a href="/categories/academics">Academics</a>
+        <a href="/categories/health-fitness">Health</a>
         <a href="/categories/beauty">Beauty</a>
         <a href="/categories/fashion">Fashion</a>
         <a href="/categories/entertainment">Entertainment</a>
+        <a href="/categories/personal-stories">Personal Stories</a>
         <a href="/contacts/new">Contact</a>
         <% if current_user && (current_user.admin? || current_user.editor?) %>
           <%= link_to "Users", users_path %>
@@ -61,14 +65,13 @@
        <% else %>
            <a href="/applies/new">Apply</a>
         <% end %>
+        <div style="height: 2000px; background-color: #ef2673;">
+        </div>
       </div>
 
     <style>
     .nav_article a {
       color: white !important;
-    }
-    a:hover {
-      color: #e0528d !important;
     }
     </style>
     <div class="overflow">
@@ -129,14 +132,12 @@
       $(document).ready(function() {
         $(".fa-times").click(function() {
           $(".sidebar_menu").addClass("hide_menu");
-          $(".sidebar_menu").addClass("opacity_one");
           $(".bodywrapper").removeClass("push");
           $(".bodywrapper").addClass("pushback");
         });
 
         $(".toggle_menu").click(function() {
           $(".sidebar_menu").removeClass("hide_menu");
-          $(".sidebar_menu").removeClass("opacity_one");
           $(".bodywrapper").addClass("push");
           $(".bodywrapper").removeClass("pushback");
         });
