--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,7 +1,7 @@
 <script>
  CKEDITOR.addCss('img{width: 55% !important; height: auto !important;margin-left: auto !important;margin-right: auto !important;display: block;}');
  CKEDITOR.addCss('iframe{margin: 0 auto !important;}');
- CKEDITOR.addCss('html {margin-left: auto;margin-right: auto;}#twitter-widget-0, #twitter-widget-1 {margin: 0 auto !important;}a {color: #e0528d;}a:hover {opacity: 0.5;}@media (max-width: 600px) {img {width: 100% !important;}}');
+ CKEDITOR.addCss('html {margin-left: auto;margin-right: auto;}#twitter-widget-0, #twitter-widget-1 {margin: 0 auto !important;}a {color: #ef2673;}a:hover {opacity: 0.5;}@media (max-width: 600px) {img {width: 100% !important;}}');
  </script>
 
 <%= form_for @post do |f| %>
@@ -26,7 +26,7 @@
 <%= f.file_field :thumbnail %><br /><br />
 
 <br><%= f.label "Category" %>
-<%= f.select :meta_title, ['Academics', 'Get Involved', 'Health & Fitness', 'Lifestyle', 'Entertainment', 'Tips & Hacks', 'DIY', 'Beauty', 'Fashion', 'Travel'] %><br />
+<%= f.select :meta_title, ['Academics', 'Get Involved', 'Health & Fitness', 'Lifestyle', 'Entertainment', 'Tips & Hacks', 'DIY', 'Beauty', 'Fashion', 'Travel', 'Personal Stories'] %><br />
 
 <br><%= f.label :meta_description %><br>
 <%= f.text_field :meta_description %>
@@ -73,6 +73,8 @@
 <%= f.hidden_field :category_id, :value => 10 %>
 <% elsif @post.meta_title == "Tips & Hacks" %>
 <%= f.hidden_field :category_id, :value => 8 %>
+<% elsif @post.meta_title == "Personal Stories" %>
+<%= f.hidden_field :category_id, :value => 13 %>
 <% end %>
 
 <% if (current_user && (current_user.admin? || current_user.editor?)) %>
