--- a/app/views/layouts/category.html.erb
+++ b/app/views/layouts/category.html.erb
@@ -52,8 +52,8 @@
       <header id="main_navigation" class="clearfix">
         <div class="border">
           <div class="logo--flex">
-            <i class="fa fa-bars toggle_menu"></i>
-            <h1 id="main_title" class="name"><%= link_to "The Teen Magazine", root_path %></h1>
+            <i class="fa fa-bars toggle_menu" style="color: white;"></i>
+            <h1 id="main_title" class="name main_title2"><%= link_to "The Teen Magazine", root_path, style: "color: white !important;" %></h1>
           </div>
           <nav style="background-color: black; border: none;" class="nav_article" id="nav_article2">
             <%= link_to "The Teen Magazine", root_path, class: "nav-title", style: "color: white !important;" %>
