Added News Category

--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -12,7 +12,7 @@
     <br />
 
     <%= f.label "Primary Category" %><br /><br />
-    <%= f.select :category, ['Academics', 'Get Involved', 'Health & Fitness', 'Lifestyle', 'Beauty', 'Fashion', 'Entertainment', 'Tips & Hacks', 'DIY']%><br />
+    <%= f.select :category, ['Academics', 'Get Involved', 'Health & Fitness', 'News', 'Lifestyle', 'Beauty', 'Fashion', 'Entertainment', 'Tips & Hacks', 'DIY']%><br />
 
     <br />
     <br />
