--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -41,6 +41,7 @@
 <% @full = @user.first_name + " " + @user.last_name %>
 
 <%= f.hidden_field :full_name, :value => @full %>
+<%= f.hidden_field :posts_count, :value => @user.posts.approved.count %>
 
 <% if current_user && current_user.admin? %>
 <%= f.label "Editor" %>
