--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -217,7 +217,7 @@
        margin: 0 auto !important;
      }
      a {
-       color: #ef2673;
+       color: #65B19D;
      }
      a:hover {
       opacity: 0.5;
