--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -12,6 +12,9 @@
 
 <br><%= f.label "Category" %><br>
 <%= f.text_field :name %>
+<br><%= f.label "Image" %><br>
+<%= f.file_field :image %>
+<br />
 
 <br><%= f.submit "Save Category" %><br><br>
 
