--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -1,6 +1,6 @@
 <style>
 .privacy strong {
-    color: #ef2673;
+    color: #65B19D;
 }
 </style>
 
@@ -182,7 +182,7 @@ We also agree to the Individual Redress Principle which requires that individual
 
 <p><strong>Contacting Us</strong></p>
 
-<p>If there are any questions regarding this privacy policy, you may contact us by through our contact form found here: <a style="color: #ef2673" href="http://www.theteenmagazine.com/contact-us" target="_blank">theteenmagazine.com/contact-us</a>.</p>
+<p>If there are any questions regarding this privacy policy, you may contact us by through our contact form found here: <a style="color: #65B19D" href="http://www.theteenmagazine.com/contact-us" target="_blank">theteenmagazine.com/contact-us</a>.</p>
 
 <p>
 Last Edited on 2017-06-27</p>
