--- a/app/assets/stylesheets/_category.css.scss
+++ b/app/assets/stylesheets/_category.css.scss
@@ -7,16 +7,14 @@
     width: 100%;
     height: 200px;
     margin-top: -10px;
-    background-image:  url("shoes.jpeg");
     background-size: cover;
     background-position: center center;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-bottom: 10px #191919 solid;
 
     #background {
-      height: 125px;
+      height: 119px;
     }
 
     h1 {
@@ -46,7 +44,7 @@
 
   .category--show {
     .other--articles {
-      margin-top: 20px;
+      margin-top: 25px;
     }
   }
 }
@@ -70,19 +68,19 @@
     margin-top: 0px !important;
   }
 
-  #main_navigation {
-    background-color: #191919;
-    #main_title {
-      font-size: 25px;
-      display: flex !important;
-      align-items: center;
-      justify-content: center;
-      margin-top: 0;
+  #banner {
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+    border-top: 1px solid rgba(0,0,0,0.1);
+
+    #name {
+      width: 150px;
     }
   }
-  .hide {
-    display: block !important;
+
+  .border {
+    display: none;
   }
+
   .col-2, .homepage_content {
     display: none !important;
   }
