--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,7 +13,7 @@
 
 $dark: #424653;
 $light: #9a9da4;
-$highlight: #ef2673;
+$highlight: #65B19D;
 $border: #E9E9E9;
 $white: #FFFFFF;
 
@@ -145,7 +145,7 @@ html, body {
 
 .fullwidth--signup {
   width: 100%;
-  background-color: #ff7a8f;
+  background-color: #65B19D;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -474,7 +474,7 @@ footer {
       height: 210px;
       background-repeat: no-repeat;
       background-size: cover;
-      background-image: url("https://s3.amazonaws.com/theteenmagazine/app/public/ckeditor_assets/pictures/68/backgroundimage_zps8rmwfdj1.PNG");      //#ff7a8f;
+      background-image: url("https://i.ibb.co/JsS5zrC/subscribe.png");
       background-position: center;
       margin-bottom: -10px;
       margin-top: 10px;
@@ -546,7 +546,7 @@ body {
 
 #mc_embed_signup {
   font: 14px Helvetica,Arial,sans-serif;
-  color: #939393;
+  color: #282828;
   margin-top: 20px;
   .button {
     margin: 0 5px 10px 0;
@@ -635,14 +635,58 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 
+  #banner {
+    display: flex;
+    flex-direction: row;
+    
+    #name {
+      max-width: 260px;
+    }
+
+    .banner_item {
+      width: 33%;
+      position: relative;
+
+      .social-media {
+        justify-content: space-between;
+        margin-right: 20px;
+        font-size: 22px !important;
+        position: relative;
+        top: 50%;
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
+
+        .fa {
+          margin-right: 14px;
+        }
+      }
+
+      .fa-twitter {
+        color: #00aced;
+      }
+      .fa-instagram {
+        color: #3f729b;
+      }
+      .fa-pinterest {
+        color: #cb2027;
+      }
+      .fa-facebook-official {
+        color: #3b5998;
+      }
+    }
+  }
+
   .logo--flex {
     .fa-bars {
-      transform: scale(1.5,1);
-      padding: 30px;
-      position: absolute;
       cursor: pointer;
       z-index: 10000000;
       color: white;
+      margin-left: 40px;
+      font-size: 20px !important;
+      position: absolute;
+      top: 50%;
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%) scale(1.5,1);
     }
 
     .name {
@@ -655,14 +699,11 @@ body {
     font-family: 'justwaitandsee';
     font-size: 1.4rem;
     font-style: italic;
-    &:hover {
-      color: white;
-    }
+    color: #65B19D;
   }
 
   nav {
     margin-top: 10px;
-    background-color: #191919;
     position: relative;
     display: block;
     width: 100%;
@@ -673,15 +714,20 @@ body {
     margin-left: auto;
     margin-right: auto;
 
+    .link {
+      margin-top: 2px;
+    }
+
     a {
       font-family: 'Univers-CnUlt', Arial, Sans-serif;
       text-transform: uppercase;
       letter-spacing: 0.01rem;
       line-height: 1;
-      font-size: 0.9rem;
-      margin: 0 0.5rem;
+      font-size: 0.8rem;
+      margin: 0 0.9rem;
+      font-weight: bolder;
       padding-top: 20px;
-      color: white;
+      color: black;
       text-decoration: none;
       color: 1;
       -webkit-transition: color 0.4s ease-out;
@@ -689,7 +735,7 @@ body {
       -o-transition: color .4s ease-out;
       transition: color .4s ease-out;
       &:hover {
-        color: $highlight;
+        color: #2B6860;
       }
     }
   }
@@ -819,7 +865,7 @@ hr {
         flex-direction: row;
         height: 120px;
         margin-bottom: 20px;
-        background-color: #ff7a8f;
+        background-color: #65B19D;
         .exclusive-offer {
           background-image: url();
         }
