--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,5 +1,5 @@
 <div class="category">
-    <div class="category_image">
+    <div class="category_image" style="background-image: url(<%= @category.image %>)">
       <div id="background">
         <h1><%= @category.name %></h1>
       </div>
