--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
     }
     </style>
 
-    <div class="sidebar_menu hide_menu" style="background-color: #ef2673;">
+    <div class="sidebar_menu hide_menu" style="background-color: #65B19D;">
       <i class="fa fa-times"></i>
       <h1><%= link_to "The Teen Magazine", root_path %></h1>
       <a href="/categories/get-involved">Get Involved</a>
@@ -51,45 +51,39 @@
      <% else %>
          <a href="/applies/new">Apply</a>
       <% end %>
-      <div style="height: 2000px; background-color: #ef2673;">  
+      <div style="height: 2000px; background-color: #65B19D;">
       </div>
     </div>
 
     <div class="overflow">
       <div class="bodywrapper">
         <header id="main_navigation" class="clearfix">
-          <a target="_blank" style="text-decoration: none;" href="https://www.rcucommunityfund.org/theteenmagazine">
-            <div class="banner_fundraiser">
-              <div class="container_fundraiser">
-                <div class="background_stats">
-                  <div class="stats">
-                    <p>• 42 dead</p>
-                    <p>• 7,000 buildings destroyed</p>
-                    <p>• 245,000 acres burned</p>
-                    <p>• $1 Billion in damages</p>
-                  </div>
-                </div>
-                <div class="nbfr_donate_container">
-                  <div style="margin-right: 30px; font-style: italic;">
-                    <h1>North Bay Fire Relief</h1>
-                  </div>
-                  <div class="green_button">
-                    <h1>DONATE</h1>
-                  </div>
-                </div>
+          <div id="banner">
+            <div class="logo--flex banner_item" style="margin-top: 0;">
+              <i class="fa fa-bars toggle_menu" style="color: black;"></i>
+            </div>
+            <div class="banner_item" style="text-align: center;">
+              <a href="/"><img id="name" src="https://i.ibb.co/jJcQ2zh/teenmag2.png"/></a>
+            </div>
+            <div class="banner_item" style="text-align: right;">
+              <div class="social-media">
+                <a class="link" href="https://www.facebook.com/theteenmagazinee/" target="_blank"><i class="fa fa-facebook-official" aria-hidden="false"></i></a>
+                <a class="link" href="https://www.pinterest.com/theteenmagazine_/" target="_blank"><i class="fa fa-pinterest" aria-hidden="false"></i></a>
+                <a class="link" href="https://twitter.com/TheTeenMagazin_" target="_blank"><i class="fa fa-twitter" aria-hidden="false"></i></a>
+                <a class="link" href="https://www.instagram.com/theteenmagazine_" target="_blank"><i class="fa fa-instagram" aria-hidden="false"></i></a>
               </div>
             </div>
-          </a>
+          </div>
 
           <div class="border">
-            <div class="logo--flex" style="margin-top: 0;">
-              <i class="fa fa-bars toggle_menu" style="color: white; padding-top: 20px;"></i>
-            </div>
-            <nav style="background-color: black; border: none; margin-top: 0 !important;" class="nav_article">
-              <%= link_to "The Teen Magazine", root_path, class: "nav-title", style: "color: white !important;" %>
+            <nav style="border-bottom: 1px solid rgba(0,0,0,0.1); border-top: 1px solid rgba(0,0,0,0.1); margin-top: 0 !important;" class="nav_article">
+              <%= link_to "The Teen Magazine", root_path, class: "nav-title"%>
+              <a class="link" href="/categories/news">News</a>
               <a class="link" href="/categories/get-involved">Get Involved</a>
               <a class="link" href="/categories/academics">Academics</a>
               <a class="link" href="/categories/health-fitness">Health</a>
+              <a class="link" href="/categories/entertainment">Entertainment</a>
+              <a class="link" href="/categories/fashion">Fashion</a>
               <% if current_user && (current_user.admin? || current_user.editor?) %>
                 <%= link_to "Users", users_path, class: "link" %>
               <% end %>
@@ -100,8 +94,6 @@
                   <a class="link" href="/contacts/new">Contact</a>
                   <a class="link" href="/applies/new">Apply</a>
               <% end %>
-              <a class="link" class="social" href="https://twitter.com/TheTeenMagazin_" target="_blank"><i class="fa fa-twitter" aria-hidden="false"></i></a>
-              <a class="link" class="social" href="https://www.instagram.com/theteenmagazine_" target="_blank"><i class="fa fa-instagram" aria-hidden="false"></i></a>
             </nav>
           </div>
         </header>
