--- a/app/views/layouts/category.html.erb
+++ b/app/views/layouts/category.html.erb
@@ -22,8 +22,14 @@
     });
   </script>
   <body>
-    <div class="category">
-      <div class="sidebar_menu hide_menu" style="background-color: #ef2673;">
+    <body>
+      <style>
+      .ng-hide {
+        display: none !important;
+      }
+      </style>
+
+      <div class="sidebar_menu hide_menu" style="background-color: #65B19D;">
         <i class="fa fa-times"></i>
         <h1><%= link_to "The Teen Magazine", root_path %></h1>
         <a href="/categories/get-involved">Get Involved</a>
@@ -43,39 +49,58 @@
        <% else %>
            <a href="/applies/new">Apply</a>
         <% end %>
-        <div style="height: 2000px; background-color: #ef2673;">
+        <div style="height: 2000px; background-color: #65B19D;">
         </div>
       </div>
 
-    <div class="overflow">
-      <div class="bodywrapper">
-      <header id="main_navigation" class="clearfix">
-        <div class="border">
-          <div class="logo--flex">
-            <i class="fa fa-bars toggle_menu" style="color: white;"></i>
-            <h1 id="main_title" class="name main_title2"><%= link_to "The Teen Magazine", root_path, style: "color: white !important;" %></h1>
-          </div>
-          <nav style="background-color: black; border: none;" class="nav_article" id="nav_article2">
-            <%= link_to "The Teen Magazine", root_path, class: "nav-title", style: "color: white !important;" %>
-            <a href="/categories/get-involved">Get Involved</a>
-            <a href="/categories/academics">Academics</a>
-            <a href="/categories/health-fitness">Health</a>
-            <a class="nav--apply" href="/contacts/new">Contact</a>
-            <% if user_signed_in? %>
-            <% else %>
-                <a href="/applies/new">Apply</a>
-            <% end %>
-            <a class="social" href="https://twitter.com/TheTeenMagazin_" target="_blank"><i class="fa fa-twitter" aria-hidden="false"></i></a>
-            <a class="social" href="https://www.instagram.com/theteenmagazine_" target="_blank"><i class="fa fa-instagram" aria-hidden="false"></i></a>
-          </nav>
-        </div>
-      </header>
+      <div class="overflow">
+        <div class="bodywrapper">
+          <header id="main_navigation" class="clearfix">
+            <div id="banner">
+              <div class="logo--flex banner_item" style="margin-top: 0;">
+                <i class="fa fa-bars toggle_menu" style="color: black;"></i>
+              </div>
+              <div class="banner_item" style="text-align: center;">
+                <a href="/"><img id="name" src="https://i.ibb.co/jJcQ2zh/teenmag2.png"/></a>
+              </div>
+              <div class="banner_item" style="text-align: right;">
+                <div class="social-media">
+                  <a class="link" href="https://www.facebook.com/theteenmagazinee/" target="_blank"><i class="fa fa-facebook-official" aria-hidden="false"></i></a>
+                  <a class="link" href="https://www.pinterest.com/theteenmagazine_/" target="_blank"><i class="fa fa-pinterest" aria-hidden="false"></i></a>
+                  <a class="link" href="https://twitter.com/TheTeenMagazin_" target="_blank"><i class="fa fa-twitter" aria-hidden="false"></i></a>
+                  <a class="link" href="https://www.instagram.com/theteenmagazine_" target="_blank"><i class="fa fa-instagram" aria-hidden="false"></i></a>
+                </div>
+              </div>
+            </div>
 
-      <% if notice %>
-        <p class="notice"><%= notice %></p>
-        <% elsif alert %>
-        <p class="alert"><%= alert %></p>
-      <% end %>
+            <div class="border">
+              <nav style="border-bottom: 1px solid rgba(0,0,0,0.1); border-top: 1px solid rgba(0,0,0,0.1); margin-top: 0 !important;" class="nav_article">
+                <%= link_to "The Teen Magazine", root_path, class: "nav-title"%>
+                <a class="link" href="/categories/news">News</a>
+                <a class="link" href="/categories/get-involved">Get Involved</a>
+                <a class="link" href="/categories/academics">Academics</a>
+                <a class="link" href="/categories/health-fitness">Health</a>
+                <a class="link" href="/categories/entertainment">Entertainment</a>
+                <a class="link" href="/categories/fashion">Fashion</a>
+                <% if current_user && (current_user.admin? || current_user.editor?) %>
+                  <%= link_to "Users", users_path, class: "link" %>
+                <% end %>
+                <% if user_signed_in? %>
+                  <%= link_to "Dashboard", user_path(current_user), class: "link" %>
+                  <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "link" %>
+                <% else %>
+                    <a class="link" href="/contacts/new">Contact</a>
+                    <a class="link" href="/applies/new">Apply</a>
+                <% end %>
+              </nav>
+            </div>
+          </header>
+
+        <% if notice %>
+          <p class="notice"><%= notice %></p>
+          <% elsif alert %>
+          <p class="alert"><%= alert %></p>
+        <% end %>
       <%= yield %>
       </div>
     </div>
