updated spacing in get involved

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -46,7 +46,7 @@
     <h1 class="section--title"><a href="/categories/academics">Get Involved</a></h1>
     <div class="flex--welcome">
       <div class="flex-1">
-        <div class="beauty--section">
+        <div class="beauty--section" style="width: 23% !important;">
           <% @number = 0 %>
           <% @posts_approved_getinvolved.each do |post_getinvolved| %>
             <% if ((filteredPosts[0..5].include? post_getinvolved) == false) && @number < 4 %>
