--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -43,7 +43,7 @@
   </div>
 
   <div class="wrapper_home">
-    <h1 class="section--title"><a href="/categories/academics">Get Involved</a></h1>
+    <h1 class="section--title"><a href="/categories/get-involved">Get Involved</a></h1>
     <div class="flex--welcome">
       <div class="flex-1">
         <div class="beauty--section">
