styling fix and icon added to tab

--- a/app/views/layouts/article.html.erb
+++ b/app/views/layouts/article.html.erb
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
-    <link rel="icon" href="http://s3.amazonaws.com/theteenmagazine/users/profiles/000/000/073/square/t_zpsbfp0cwb0_%282%29.JPG?1499397498">
+    <link rel="icon" href="https://i.ibb.co/TBp2fyD/logot-2.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta property="fb:app_id" content="1190455601051741" />
     <meta property="og:url"                content="http://www.theteenmagazine.com/<%= @post.slug %>" />
