--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -50,7 +50,7 @@
           <% @number = 0 %>
           <% @posts_approved_getinvolved.each do |post_getinvolved| %>
             <% if ((filteredPosts[0..5].include? post_getinvolved) == false) && @number < 4 %>
-            <div class="one_beauty_article"  style="width: 23% !important;">
+            <div class="one_beauty_article"  style="width: 23%;">
               <%=link_to(image_tag(post_getinvolved.thumbnail.url(:large2), alt: post_getinvolved.title), post_getinvolved )%>
               <h1><%= link_to post_getinvolved.title, post_getinvolved %></h1>
               <p><%= post_getinvolved.created_at.strftime("%A, %b %d")%></p>
