google adsense amp

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,15 +20,20 @@
               enable_page_level_ads: true
          });
     </script>
+    <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+    </script>
     <script type="text/javascript" data-cfasync="false" src="//dsms0mj1bbhn4.cloudfront.net/assets/pub/shareaholic.js" data-shr-siteid="c9da6ae24795a7bfd3892b5ea7e9c54b" async="async"></script>
   </head>
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <body>
     <style>
     .ng-hide {
       display: none !important;
     }
     </style>
+    <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-4986861624955300">
+    </amp-auto-ads>
 
     <div class="sidebar_menu hide_menu" style="background-color: #65B19D;">
       <i class="fa fa-times"></i>
