--- a/app/views/layouts/category.html.erb
+++ b/app/views/layouts/category.html.erb
@@ -13,14 +13,17 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({
+              google_ad_client: "ca-pub-4986861624955300",
+              enable_page_level_ads: true
+         });
+    </script>
+    <script async custom-element="amp-auto-ads"
+          src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+    </script>
   </head>
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <script>
-       (adsbygoogle = window.adsbygoogle || []).push({
-            google_ad_client: "ca-pub-4986861624955300",
-            enable_page_level_ads: true
-       });
-  </script>
   <body>
     <body>
       <style>
@@ -28,6 +31,9 @@
         display: none !important;
       }
       </style>
+      <amp-auto-ads type="adsense"
+          data-ad-client="ca-pub-4986861624955300">
+      </amp-auto-ads>
 
       <div class="sidebar_menu hide_menu" style="background-color: #65B19D;">
         <i class="fa fa-times"></i>
