--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -315,6 +315,31 @@
   }
 }
 
+.team {
+  .about {
+    p {
+      padding: 30px;
+    }
+    #main {
+      width: 40%;
+      height: auto;
+      float: left;
+      margin-right: 30px;
+    }
+  }
+  h3 {
+    color: $highlight;
+  }
+  .featured {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    h6 {
+      margin: 20px;
+    }
+  }
+}
+
 @media (max-width: 900px) {
   .guidelines {
     flex-wrap: wrap;
