--- a/app/views/layouts/article.html.erb
+++ b/app/views/layouts/article.html.erb
@@ -129,6 +129,7 @@
       <div class="container--footer">
         <div class="flex--column--footer">
           <a href="/" class="copyright">The Teen Magazine</a>
+          <a href="/about-us">About Us</a>
           <a href="/privacy-policy">Privacy Policy</a>
         </div>
         <nav>
