--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -330,12 +330,17 @@
   h3 {
     color: $highlight;
   }
-  .featured {
+  .flex--profile {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    h6 {
-      margin: 20px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    .featured {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      h6 {
+        margin: 20px;
+      }
     }
   }
 }
