--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -338,6 +338,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      width: 150px;
       h6 {
         margin: 20px;
       }
