--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,7 +13,7 @@
 <div id="posts_wrapper" class="skinny_wrapper">
   <% @users.each do |user| %>
       <div class="user">
-        <h3><a href="#"><%= link_to user.email, user%></a></h3>
+        <h3><%= user.posts_count %> <a href="#"><%= link_to user.email, user%></a></h3>
       </div>
   <% end %>
   <%= link_to "New User", new_user_registration_path, :class => "link--edit" %>
